fix gap header and body mobileUI

--- a/golf-play-recommendation/src/assets/scss/Homepage454px.scss
+++ b/golf-play-recommendation/src/assets/scss/Homepage454px.scss
@@ -33,7 +33,7 @@
   .header-content {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: center;
     justify-content: space-between;
   }
 
@@ -69,7 +69,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50px;
-    margin-top: 64px;
+    margin-top: 24px;
     padding: 16px;
   }
 
