--- a/golf-play-recommendation/src/assets/scss/Homepage574px.scss
+++ b/golf-play-recommendation/src/assets/scss/Homepage574px.scss
@@ -69,7 +69,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50px;
-    margin-top: 64px;
+    margin-top: 24px;
     padding: 16px;
   }
 
